changed class m-y-{size} to my-{size} changed class m-x-auto to mx-auto

--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -56,7 +56,7 @@
 
         {% if beforeCouponContainer|trim is not empty %}
             {{ beforeCouponContainer }}
-            <hr class="m-y-2">
+            <hr class="my-4">
         {% endif %}
     </div>
 {% endblock %}
