--- a/resources/views/Basket/Components/AddToBasket.twig
+++ b/resources/views/Basket/Components/AddToBasket.twig
@@ -14,7 +14,7 @@
 
         <div class="category-list-view-port" v-if="showQuantity && !useLargeScale">
             <span>
-                <div class="col-xs-12 col-sm-7 col-md-12 col-lg-8 m-y-1">
+                <div class="col-xs-12 col-sm-7 col-md-12 col-lg-8 my-3">
                     <div class="add-to-basket-container">
                         <div class="quantity-input-container">
                             <quantity-input :value="1"
