--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -134,11 +134,11 @@
                         {% endif %}
 
                         {% if "basket.item.description_long" in basketDetailsData %}
-                            <p class="m-y-1" v-if="basketItem.variation.data.texts.description" v-html="basketItem.variation.data.texts.description"></p>
+                            <p class="my-3" v-if="basketItem.variation.data.texts.description" v-html="basketItem.variation.data.texts.description"></p>
                         {% endif %}
 
                         {% if "basket.item.description_short" in basketDetailsData %}
-                            <p class="m-y-1" v-if="basketItem.variation.data.texts.description" v-html="basketItem.variation.data.texts.shortDescription"></p>
+                            <p class="my-3" v-if="basketItem.variation.data.texts.description" v-html="basketItem.variation.data.texts.shortDescription"></p>
                         {% endif %}
                     </div>
 
