--- a/resources/views/Item/Components/GraduatedPrices.twig
+++ b/resources/views/Item/Components/GraduatedPrices.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-graduated-prices">
     <div>
-        <div class="m-y-1" v-if="graduatedPrices[0]">
+        <div class="my-3" v-if="graduatedPrices[0]">
             <b>{{ trans("Ceres::Template.singleItemGraduatedPrices") }}:</b>
             
             <table class="graduated-prices-table text-muted">
