--- a/resources/views/StaticPages/TermsAndConditions.twig
+++ b/resources/views/StaticPages/TermsAndConditions.twig
@@ -19,7 +19,7 @@
                     <h1>{{ trans("Ceres::Template.termsAndConditions") }}</h1>
                 {% endautoescape %}
 
-                <hr class="m-y-3">
+                <hr class="my-5">
 
                 {% if termsAndConditions.htmlText %}
                     {{ termsAndConditions.htmlText | raw }}
