--- a/resources/views/Widgets/Common/Partials/CategoryListItemPreview.twig
+++ b/resources/views/Widgets/Common/Partials/CategoryListItemPreview.twig
@@ -17,7 +17,7 @@
                             <img class="img-fluid" src="{{ image.url }}">
                         </a>
                     {% else %}
-                        <i class="fa fa-image fa-5x text-primary m-x-auto"></i>
+                        <i class="fa fa-image fa-5x text-primary mx-auto"></i>
                     {% endif %}
                 </div>
             </div>
