--- a/resources/views/Widgets/Footer/LegalInformationWidget.twig
+++ b/resources/views/Widgets/Footer/LegalInformationWidget.twig
@@ -10,7 +10,7 @@
     cancellationPdfPath: widget.settings.cancellationFormContainer.cancellationPdfPath.mobile
 } %}
 
-<div class="widget-legal-information text-xs-center m-y-1">
+<div class="widget-legal-information text-xs-center my-3">
     <div>
         {{ Twig.do('autoescape false') }}
 
