--- a/resources/views/StaticPages/CancellationRights.twig
+++ b/resources/views/StaticPages/CancellationRights.twig
@@ -19,7 +19,7 @@
                     <h1>{{ trans("Ceres::Template.cancellationRights", {"hyphen": "&shy;"}) }}</h1>
                 {% endautoescape %}
 
-                <hr class="m-y-3">
+                <hr class="my-5">
 
                 {% if cancellationRights.htmlText %}
                     {{ cancellationRights.htmlText | raw }}
