--- a/resources/views/StaticPages/LegalDisclosure.twig
+++ b/resources/views/StaticPages/LegalDisclosure.twig
@@ -19,7 +19,7 @@
                     <h1>{{ trans("Ceres::Template.legalDisclosure") }}</h1>
                 {% endautoescape %}
 
-                <hr class="m-y-3">
+                <hr class="my-5">
 
                 {% if legalDisclosure.htmlText %}
                     {{ legalDisclosure.htmlText | raw }}
