--- a/resources/views/StaticPages/PrivacyPolicy.twig
+++ b/resources/views/StaticPages/PrivacyPolicy.twig
@@ -19,7 +19,7 @@
                     <h1>{{ trans("Ceres::Template.privacyPolicy", {"hyphen": "&shy;"}) }}</h1>
                 {% endautoescape %}
 
-                <hr class="m-y-3">
+                <hr class="my-5">
 
                 {% if privacyPolicy.htmlText %}
                     {{ privacyPolicy.htmlText | raw }}
