--- a/resources/views/Widgets/Common/SeparatorWidget.twig
+++ b/resources/views/Widgets/Common/SeparatorWidget.twig
@@ -1,3 +1,3 @@
 {% if isPreview %}<div class="widget-editable-min-height">{% endif %}
-    <hr class="m-y-2">
+    <hr class="my-4">
 {% if isPreview %}</div>{% endif %}
