changed class text-xs-center to text-center

--- a/resources/views/ItemList/Components/Pagination.twig
+++ b/resources/views/ItemList/Components/Pagination.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-pagination">
-    <nav class="cmp cmp-paginator row float-right text-xs-center" v-if="pageMax > 1">
+    <nav class="cmp cmp-paginator row float-right text-center" v-if="pageMax > 1">
         <ul class="pagination col-xs-12 m-y-0">
 
             <!-- FIRST PAGE LINK -->
