--- a/resources/views/Category/Item/Partials/Pagination.twig
+++ b/resources/views/Category/Item/Partials/Pagination.twig
@@ -1,5 +1,5 @@
 {% if pageMax > 1 %}
-    <nav class="cmp cmp-paginator row float-right text-xs-center">
+    <nav class="cmp cmp-paginator row float-right text-center">
         <ul class="pagination col-xs-12 m-y-0">
 
             <!-- PREV LINK -->
