--- a/resources/views/ItemList/Components/Filter/ItemFilterList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterList.twig
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-12 text-xs-right">
+                    <div class="col-xs-12 text-right">
                         <button type="button" class="btn btn-primary btn-medium" data-toggle="collapse" href="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse" @click="toggleOpeningState()">
                             <i class="fa fa-times" aria-hidden="true"></i> {{ trans("Ceres::Template.itemClose") }}
                         </button>
