--- a/resources/views/PageDesign/Partials/PaginationTemplate.twig
+++ b/resources/views/PageDesign/Partials/PaginationTemplate.twig
@@ -1,4 +1,4 @@
-<nav class="cmp cmp-paginator row float-right text-xs-center" v-if="{{ pageMax }} > 1">
+<nav class="cmp cmp-paginator row float-right text-center" v-if="{{ pageMax }} > 1">
         <ul class="pagination col-xs-12 m-y-0">
 
             <!-- FIRST PAGE LINK -->
