changed old bootstrap classes to new syntax

--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -37,7 +37,7 @@
 					</div>
                 {% endif %}
 
-				<div class="col-xs-12 p-x-0 {% if contactConfigSet and not googleApiKey %}col-sm-12 col-md-8 col-lg-9 {% endif %}well well-sm">
+				<div class="col-xs-12 px-0 {% if contactConfigSet and not googleApiKey %}col-sm-12 col-md-8 col-lg-9 {% endif %}well well-sm">
 					<form id="contact-form">
 
 						<div class="col-xs-12 col-md-6 mb-3">
