--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -20,7 +20,7 @@
     </div>
 
     {% if numberOfFeatures > 0 %}
-        <div class="footer-features p-y-1 container-max">
+        <div class="footer-features py-3 container-max">
             <div class="row">
                 {% for i in 1..numberOfFeatures %}
                     <div class="col-xs-12 col-sm-4 text-center">
