--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -34,7 +34,7 @@
             </div>
 
             <div class="col-md-5 float-right" v-stick-in-parent>
-                <div class="col-xs-12 p-y-2 bg-white">
+                <div class="col-xs-12 py-4 bg-white">
                     <hr class="d-md-none">
                     <basket-totals class="mb-4" template="#vue-basket-totals"></basket-totals>
 
