--- a/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
+++ b/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
@@ -51,6 +51,11 @@
 	.add-item{
 		position: absolute;
 		
+		.btn {
+			width: auto;
+			min-width: 10rem;
+		}
+
 		@include media-breakpoint-down(xs)
 		{
 			top: 0;
