CHANGE ItemFilterTagList - the reset all facet button is now visible when 2 or more facets are selected (was 3 before)

--- a/resources/views/ItemList/Components/Filter/ItemFilterTagList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterTagList.twig
@@ -4,7 +4,7 @@
             <i class="fa fa-times" aria-hidden="true"></i> ${ tag.name }
         </span>
 
-        <span class="selected-filter reset-all" v-if="tagList.length > 2" @click="resetAllTags()">
+        <span class="selected-filter reset-all" v-if="tagList.length >= 2" @click="resetAllTags()">
             {{ trans("Ceres::Template.itemFilterReset") }}
         </span>
     </div>
