--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -14,7 +14,7 @@
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterTagList") }}
 
     {% if ceresConfig.item.showCategoryImage %}
-        {% include "Ceres::Category.Partials.CategoryParallaxImage" with { 'category': category } %}
+        {% include "Ceres::Category.Item.Partials.CategoryParallaxImage" with { 'category': category } %}
     {% endif %}
 
     <div class="categoriegrid page-content container-max">
@@ -37,9 +37,9 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="list-wrapper">
-                            {% include "Ceres::Category.Partials.ItemSorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
+                            {% include "Ceres::Category.Item.Partials.ItemSorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
 
-                            {% include "Ceres::Category.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
+                            {% include "Ceres::Category.Item.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
 
                             {% if overrideSearchFilters | trim is empty %}
                                 <item-filter-list :facet-data="{{ facets | json_encode }}">
@@ -64,7 +64,7 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    {% include "Ceres::Category.Partials.Pagination" %}
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
                 </div>
             </div>
         {% endif %}
@@ -101,7 +101,7 @@
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    {% include "Ceres::Category.Partials.Pagination" %}
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
                 </div>
             </div>
         {% endif %}
