--- a/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
+++ b/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
@@ -19,7 +19,15 @@
                                 <strong v-if="selectedAddress && selectedAddress.name1 && selectedAddress.name1.length > 0">${selectedAddress.name1}</strong>
                                 <strong v-if="selectedAddress && !selectedAddress.name1 || selectedAddress.name1.length == 0">${selectedAddress | optionType(11)} ${selectedAddress.name2} ${selectedAddress.name3}</strong>
                                 <span v-else>${selectedAddress | optionType(11)} ${selectedAddress.name2} ${selectedAddress.name3}</span>
+                                <span>${selectedAddress.name4}</span>
                                 <span>${selectedAddress.address1} ${selectedAddress.address2}</span>
+                                <span>
+                                    <template v-if="selectedAddress.address1 === 'PACKSTATION' || selectedAddress.address1 === 'POSTFILIALE'">
+                                        {{ trans("Ceres::Template.addressPostNummer") }}
+                                    <template> 
+                                    
+                                    ${ selectedAddress.address3 }
+                                </span>
                                 <span>${selectedAddress.postalCode} ${selectedAddress.town}</span>
                                 <span>${getCountryName(selectedAddress.countryId)}</span>
                             </div>
@@ -63,6 +71,13 @@
                                 <span v-else>${selectedAddress | optionType(11)} ${address.name2} ${address.name3}</span>
                                 <span>${address.name4}</span>
                                 <span>${address.address1} ${address.address2}</span>
+                                <span>
+                                    <template v-if="address.address1 === 'PACKSTATION' || address.address1 === 'POSTFILIALE'">
+                                        {{ trans("Ceres::Template.addressPostNummer") }}
+                                    <template> 
+                                    
+                                    ${ address.address3 }
+                                </span>
                                 <span>${address.postalCode} ${address.town}</span>
                                 <span>${getCountryName(address.countryId)}</span>
                             </span>
@@ -135,6 +150,13 @@
                                             <span v-else>${selectedAddress | optionType(11)} ${addressToDelete.name2} ${addressToDelete.name3}</span>
                                             <span>${addressToDelete.name4}</span>
                                             <span>${addressToDelete.address1} ${addressToDelete.address2}</span>
+                                            <span>
+                                                <template v-if="addressToDelete.address1 === 'PACKSTATION' || addressToDelete.address1 === 'POSTFILIALE'">
+                                                    {{ trans("Ceres::Template.addressPostNummer") }}
+                                                <template> 
+                                                
+                                                ${ addressToDelete.address3 }
+                                            </span>
                                             <span>${addressToDelete.postalCode} ${addressToDelete.town}</span>
                                             <span>${getCountryName(addressToDelete.countryId)}</span>
                                         </div>
