ADD post number for order confirmation

--- a/resources/views/Checkout/OrderDetails.twig
+++ b/resources/views/Checkout/OrderDetails.twig
@@ -55,6 +55,13 @@
                                     <div>{{ orderData.order.deliveryAddress.name2 }} {{ orderData.order.deliveryAddress.name3 }}</div>
                                     <div>{{ orderData.order.deliveryAddress.name4 }}</div>
                                     <div>{{ orderData.order.deliveryAddress.address1 }} {{ orderData.order.deliveryAddress.address2 }}</div>
+                                    <div>
+                                        {% if orderData.order.deliveryAddress.address1 == 'PACKSTATION' or orderData.order.deliveryAddress.address1 == 'POSTFILIALE' %}
+                                            {{ trans("Ceres::Template.addressPostNummer") }}
+                                        {% endif %}
+                                        
+                                        {{ orderData.order.deliveryAddress.address3 }}
+                                    </div>
                                     <div>{{ orderData.order.deliveryAddress.postalCode }} {{ orderData.order.deliveryAddress.town }}</div>
                                     <div>{{ services.country.getCountryName(orderData.order.deliveryAddress.countryId) }}</div>
                                 </span>
