--- a/resources/views/Customer/Components/Registration.twig
+++ b/resources/views/Customer/Components/Registration.twig
@@ -1,3 +1,5 @@
+{% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
+
 {{ component( "Ceres::Customer.Components.AddressInputGroup.AddressInputGroup" ) }}
 <script type="x/template" id="vue-registration">
     <div>
